--- a/article.html
+++ b/article.html
@@ -4,6 +4,7 @@
                 <meta charset="utf-8">
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
                 <meta name="description" content="site de e-commerce pour vos peluches">
+                <meta name="viewport" content="width=device-width" />
                 <title>Orinoco, site de e-commerce pour vos peluches</title>
                 <link rel="stylesheet" href="css/accueil.css"/>
                 <script src="js/article.js" defer></script>
@@ -27,9 +28,8 @@
                                        </select>
                                       </div>
                                         
-                                      <a id="panier" href="panier.html">
-                                      <button class="flex items-center border-radius">ajouter au panier</button>
-                                      </a>
+                                      <a id="panier" href="panier.html" class="flex items-center border-radius">ajouter au panier</a>
+                                      
                               </main>
                               <footer>
                                 <div class="flex pt-2 bg">
