--- a/panier.html
+++ b/panier.html
@@ -4,6 +4,7 @@
                 <meta charset="utf-8">
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
                 <meta name="description" content="site de e-commerce pour vos peluches">
+                <meta name="viewport" content="width=device-width" />
                 <title>Panier Orinoco, site de e-commerce pour vos peluches</title>
                 <link rel="stylesheet" href="css/accueil.css"/>
                 <script src="js/panier.js" defer></script>
@@ -22,22 +23,25 @@
                                </header>
                                <main>
                                          <section class="bg mt">
-                                                 <table class="container ml-1">
+                                                 <table id="articlecommande" class="container ml-1">
                                                          <h2 id="h2">votre commande</h2>
                                                          <thead>
                                                            <tr>
-                                                                 <th id="produit">Produit</th>
-                                                                 <th id="nombre">Quantité</th>
-                                                                 <th id="prix">Prix</th>
-                                                                 <th id="total">total</th>
+                                                                 <th>Produit</th>
+                                                                 <th>Quantité</th>
+                                                                 <th>Prix</th>
+                                                                 <th>total</th>
                                                            </tr>
                                                          </thead>
-                                                         <tbody class="" >
+                                                         <tbody id="listearticle" class="" >
+
+                                                         </tbody>
+                                                         <tfoot>
                                                                 <tr>
                                                                         <th class="">total</th>
                                                                         <th><input class="input" type="number"> </th>
                                                                 </tr>
-                                                         </tbody>
+                                                         </tfoot>
                                                  </table>
                                          </section>
                                          <section class="bg mt">
