--- a/panier.html
+++ b/panier.html
@@ -5,6 +5,7 @@
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
                 <meta name="description" content="site de e-commerce pour vos peluches">
                 <meta name="viewport" content="width=device-width" />
+                <!-- <meta http-equiv="refresh" content="5"> -->
                 <title>Panier Orinoco, site de e-commerce pour vos peluches</title>
                 <link rel="stylesheet" href="css/accueil.css"/>
                 <script src="js/panier.js" defer></script>
@@ -22,28 +23,16 @@
                                               </nav>
                                </header>
                                <main>
-                                         <section class="bg mt">
+                                         <section class="bg mt flex direction">
                                                  <table id="articlecommande" class="container ml-1">
                                                          <h2 id="h2">votre commande</h2>
                                                          <thead>
-                                                           <tr>
-                                                                 <th>Produit</th>
-                                                                 <th>couleur</th>
-                                                                 <th>Quantité</th>
-                                                                 <th>Prix</th>
-                                                                 <th>total</th>
-                                                           </tr>
+                                                           <tr><th>Produit</th><th>couleur</th><th>Quantité</th> <th>Prix</th><th>total</th></tr>   
                                                          </thead>
-                                                         <tbody id="listearticle" class="flex justify-content direction width" >
-                                                              
-                                                         </tbody>
-                                                         <tfoot>
-                                                                <tr>
-                                                                        <th class="">total</th>
-                                                                        <th><input id="prixtotal" class="input" type="number"> </th>
-                                                                </tr>
-                                                         </tfoot>
-                                                 </table>
+                                                         <tbody id="listearticle"  class="flex justify-content direction width" > </tbody>
+                                                 </table>        
+                                                 <p id="prixtotal" class="flex end">total : <span></span>€</p>
+                                                 
                                          </section>
                                          <section class="bg mt">
                                                  <div class="ml-1">
