--- a/panier.html
+++ b/panier.html
@@ -27,9 +27,9 @@
                                                  <table id="articlecommande" class="container ml-1">
                                                          <h2 id="h2">votre commande</h2>
                                                          <thead>
-                                                           <tr><th>Produit</th><th>couleur</th><th>Quantité</th> <th>Prix</th><th>total</th></tr>   
+                                                           <tr class="flex justify-content"><th>Produit</th><th>couleur</th><th>Quantité</th> <th>Prix</th><th>total</th></tr>   
                                                          </thead>
-                                                         <tbody id="listearticle"  class="flex justify-content direction width" > </tbody>
+                                                         <tbody id="listearticle"> </tbody>
                                                  </table>        
                                                  <p id="prixtotal" class="flex end">total : <span></span>€</p>
                                                  
@@ -42,34 +42,32 @@
                                                            <div class="flex justify-content mt col-12 column"> 
                                                                 <div class="flex direction">
                                                                        <label class="label" for="firstName">Prénom</label>
-                                                                       <input class="input" type="text" name="firstName">
+                                                                       <input class="input" type="text" name="firstName" required>
                                                                  </div>
                                                                  <div class="flex direction">
                                                                          <label class="label" for="lastName">Nom</label>
-                                                                         <input class="input" type="text" name="lastName">
+                                                                         <input class="input" type="text" name="lastName" required>
                                                                  </div> 
                                                                  <div class="flex direction">
                                                                          <label class="label" for="mail">Adresse e-mail</label>
-                                                                         <input class="input" type="email" name="mail">
+                                                                         <input class="input" type="email" name="mail" required>
                                                                  </div>
                                                            </div> 
                                                            <div class="flex justify-content mt col-12 column">
                                                                    <div class="flex direction">
                                                                            <label class="label" for="adresse">Adresse</label>
-                                                                           <input class="input" type="text" name="adresse">
+                                                                           <input class="input" type="text" name="adresse" required>
                                                                    </div>
                                                                    <div class="flex direction">
                                                                            <label class="label" for="codePostal">Code postal</label>
-                                                                           <input class="input" type="number" name="codePostal">
+                                                                           <input class="input" type="number" name="codePostal" minlength="6" maxlength="6" placeholder="6 chiffres" required>
                                                                    </div>
                                                                    <div class="flex direction">
                                                                            <label class="label" for="ville">ville</label>
-                                                                           <input class="input" type="text" name="ville">
+                                                                           <input class="input" type="text" name="ville" required>
                                                                    </div>
                                                            </div>
-                                                           <a href="orderstatus.html">
-                                                           <button class="mt">commande</button>
-                                                           </a>
+                                                           <a id="boutonCommande" href="orderstatus.html" class="mt">commande</a>
                                                        </form>
                                                  </div>
                                                  </div>                                                        
